# aws_s3_lambda_sam

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
events/: event.json
lambda_function/: app.py  s3_log_manager.py
lambda_function/tests/: test_lambda.py
terraform/: dependencies.tf  main.tf
