[tool.poetry]
name = "aws-s3-lmbd"
version = "0.1.0"
description = "Uploaded Log Files in S3 Bucket Using AWS Lambda Triggered by EventBridge, Deployed with SAM and Terraform"
authors = ["Sashamxz <sasha.oom7@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_s3_lmbd"}]

[tool.poetry.dependencies]
python = "3.9.1"
boto3 = "^1.26.109"
moto = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
